--- a/Statistics and Trends.ipynb
+++ b/Statistics and Trends.ipynb
@@ -14,7 +14,7 @@
     "## Report by:\n",
     "- **Name:** Nazmul Hossain\n",
     "- **Student ID:** 23015862\n",
-    "- **GitHub Repository:** https://github.com/nazmul-nil/statistics-and-trends\n"
+    "- **GitHub Repository:** [nazmul-nil/statistics-and-trends](https://github.com/nazmul-nil/statistics-and-trends)\n"
    ]
   },
   {
@@ -483,7 +483,7 @@
     "    \n",
     "    # Plots the heatmap of the correlation between the variables Age and Purchase Amount (USD)\n",
     "    sns.heatmap(sub_dataframe.corr(method = method), ax = ax, annot=True)\n",
-    "   \n",
+    "   ,\n",
     "    plt.title(method.capitalize() + \" Correlation\")\n",
     "        \n",
     "    plt.show()\n",
